<resources>
    <string name="app_name">GoogleSignInExample</string>
    <string name="google_failed">Google Sign-In Failed! Retry again or check your internet connection.</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name_of_the_art">Raphael And Athens School</string>
    <string name="name_of_artist">Raphael</string>
    <string name="description_text">Morbi et euismod augue. Etiam ut semper lorem. Donec viverra nisi at ligula bibendum mollis. Morbi blandit justo non nulla luctus sodales. Phasellus euismod quam et nisl malesuada pharetra quis interdum libero. Cras sed lacus a turpis lacinia euismod ac non tellus. Vivamus dui sapien, laoreet non urna nec, tempus porta felis. Pellentesque commodo ipsum sit amet blandit laoreet. Nunc lobortis pellentesque est id efficitur. Sed malesuada mi tortor, ut porta dolor maximus ut. In hac habitasse platea dictumst. Cras sodales sem neque, in commodo dui suscipit sed. Vivamus id lectus a orci consectetur volutpat vitae sit amet erat. Pellentesque volutpat ac lorem ac fringilla. Duis viverra eu neque vel facilisis. Vivamus justo nibh, rutrum et elit posuere, lacinia malesuada mi.Aenean faucibus ligula nisl, ut laoreet nisi vehicula vitae. Vestibulum ac est tristique, fringilla metus non, tempus augue. Nullam in nisl at ligula ultrices venenatis sed a dolor. Ut rhoncus bibendum dolor, et tempus urna volutpat eget. Donec pellentesque mollis nunc, et accumsan arcu ullamcorper at.</string>
    <string name="like_button">Like Button</string>
    <string name="dislike_button">Dislike Button</string>
    <string name="share_button_text">SHARE</string>
    <string name="add_library_button_text">ADD TO LIBRARY</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="art_image_description">Here to show Art Images</string>
    <string name="not_signed">You could not signed in successfully.</string>
    <string name="completed_daily">\"You completed your daily <b>ART</b> informations\"</string>
    <string name="go_to_library">GO TO LIBRARY</string>
    <string name="add_new_artwork">Add New ArtWork</string>
    <string name="title_activity_library">LIBRARY</string>
    <string name="title_activity_add_new">AddNewActivity</string>
</resources>
