<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/completed_textview"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        android:padding="22dp"
        android:text="@string/completed_daily"
        android:gravity="center"
        android:fontFamily="open-sans"
        android:textSize="32sp"
        android:textStyle="italic"
        android:textColor="#FFFFFF"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        app:layout_constraintTop_toBottomOf="@+id/completed_textview">
        <Button
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_button_text"

            />
        <Button
            android:id="@+id/library_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_library"/>
        <Button
            android:id="@+id/add_new_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_artwork"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>