<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/name_and_artist"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/art_name"
                        android:layout_width="wrap_content"
                        android:layout_height="65dp"
                        android:layout_marginStart="10dp"
                        android:gravity="center_vertical|center"
                        android:text="@string/name_of_the_art"
                        android:textAlignment="gravity"
                        android:textColor="#222222"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/artist_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/art_name"
                        android:layout_alignParentEnd="true"
                        android:text="Tab3"
                        android:textColor="#777777"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@drawable/brush" />
            </LinearLayout>

            <ImageView
                android:id="@+id/art_image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="20dp"
                android:background="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:srcCompat="@drawable/raphael_ve_atina_okulu_4"
                android:contentDescription="@string/art_image_description" />

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/description_container"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintTop_toBottomOf="@+id/art_image"
                >

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/description_text"
                    android:textColor="#222222" />
            </android.support.v4.widget.NestedScrollView>

            <LinearLayout
                android:id="@+id/like_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/description_container"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <ImageButton
                    android:id="@+id/like_button"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_dark"
                    android:visibility="visible"
                    android:contentDescription="@string/like_button" />

                <ImageButton
                    android:id="@+id/unlike_button"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_dark"
                    android:visibility="visible"
                    android:contentDescription="@string/dislike_button" />
                <ProgressBar
                    android:id="@+id/like_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:padding="10dp"
                    style="?android:progressBarStyleHorizontal"
                    android:visibility="gone"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/like_buttons">

                <Button
                    android:id="@+id/share_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/share_button_text"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/library_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:text="@string/add_library_button_text"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>